// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cli adds a delta to the new config if smaller than maxSize 1`] = `
"{
  "files": [
    {
      "path": "/",
      "maxSize": "5.03KB"
    },
    {
      "path": "/_app",
      "maxSize": "5.02KB"
    },
    {
      "path": "/[locale]/layout",
      "maxSize": "5.02KB"
    },
    {
      "path": "/[locale]/search",
      "maxSize": "5.03KB"
    }
  ]
}"
`;

exports[`cli produces config with correct routes and sizes 1`] = `
"{
  "files": [
    {
      "path": "/",
      "maxSize": "1 kB",
      "size": "30B"
    },
    {
      "path": "/_app",
      "maxSize": "1 kB",
      "size": "20B"
    },
    {
      "path": "/[locale]/layout",
      "maxSize": "1 kB",
      "size": "25B"
    },
    {
      "path": "/[locale]/search",
      "maxSize": "1 kB",
      "size": "30B"
    }
  ]
}"
`;

exports[`cli uses the previous config if defined 1`] = `
"{
  "files": [
    {
      "path": "/",
      "maxSize": "150 kB",
      "size": "30B"
    },
    {
      "path": "/_app",
      "maxSize": "170 kB",
      "size": "20B"
    },
    {
      "path": "/[locale]/layout",
      "maxSize": "180 kB",
      "size": "25B"
    },
    {
      "path": "/[locale]/search",
      "maxSize": "1 kB",
      "size": "30B"
    }
  ]
}"
`;
